# MusicNotifier

./: .envexample  .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  notifications.rs
src/spotify/: auth.rs  client.rs  mod.rs
