[package]
name = "MusicNotifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database - SQLite with bundled C library
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Async runtime - needed for networking
tokio = { version = "1.0", features = ["full", "macros", "signal"] }

# HTTP client for Spotify API
reqwest = { version = "0.13.2", features = ["json", "form"] }

# JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables (to hide your Spotify Client Secret)
dotenvy = "0.15"

# Date and Time handling
chrono = { version = "0.4", features = ["serde"] }

webbrowser = "1.1.0"

rand = "0.10.0"